--- a/phpday12ajax/03ajax-fn.html
+++ b/phpday12ajax/03ajax-fn.html
@@ -88,7 +88,7 @@
 			data = params
 		}
 		
-		xhr.send(params)
+		xhr.send(data)
 		xhr.onreadystatechange = function() {
 		if(this.readyState !== 4) return
 		console.log(this.responseText) 
